# VocalAdversary2022

./: Librispeech_accuracyresults.xlsx  README.md  VocalAdversary_accuracy.xlsx  Voxceleb_accuracyresults.xlsx  pgd.py
data_utility-main/: README.md  pyproject.toml
data_utility-main/data_utility/eval/speech/: transform.py
data_utility-main/data_utility/pipe/: builder.py  containers.py
data_utility-main/data_utility/pipe/primitives/: chunk.py  shard.py
data_utility-main/data_utility/scripts/: collect_statistics.py  generate_speaker_mapping.py  generate_speaker_trials.py  split_csv.py  write_tar_shards.py
data_utility-main/data_utility/util/: csv.py  validate.py  various.py
data_utility-main/librispeech/: all_steps.sh  default_write_shards.sh  generate_csv.py
data_utility-main/notebooks/: nv_01_stat_plot.ipynb
data_utility-main/voxceleb/: all_steps.sh  default_generate_meta_files.sh  default_setup_shards.sh  default_write_shards.sh  generate_csv.py  unzip_voxceleb_archives.sh
vox2_gender_recognition-master/: pyproject.toml  readme.md  run.py
vox2_gender_recognition-master/config/: main.yaml
vox2_gender_recognition-master/config/callbacks/: default.yaml  early_stopping.yaml
vox2_gender_recognition-master/config/data/gender_datapipe/: default_datapipe.yaml
vox2_gender_recognition-master/config/data/module/: all_test.yaml  librispeech_100h.yaml  librispeech_960h.yaml  voxceleb.yaml
vox2_gender_recognition-master/config/experiment/: m5.yaml  wavlm.yaml  xvector.yaml
vox2_gender_recognition-master/config/network/: m5.yaml  wavlm.yaml  xvector.yaml
vox2_gender_recognition-master/config/optim/schedule/: cyclic.yaml
vox2_gender_recognition-master/requirements/: requirements_torch110_cuda113.txt  requirements_torch111_cuda113.txt
vox2_gender_recognition-master/src/: main.py
vox2_gender_recognition-master/src/callbacks/: input_monitor_callback.py
vox2_gender_recognition-master/src/data/module/: __init__.py  gender.py
vox2_gender_recognition-master/src/networks/: gr_module.py  m5.py  wavLM.py  xvector.py
