[tool.poetry]
name = "vox2_gender_recognition"
version = "0.1.0"
description = ""
authors = ["Nik Vaessen <git@mail.vaessen.tech>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
data_utility = { path = "../data_utility", develop = true }
black = { extras = ["d"], version = "^22.8.0" }
pytorch-lightning = "^1.7.7"
wandb = "^0.13.3"
transformers = "^4.22.2"
hydra-core = "^1.2.0"
hydra-submitit-launcher = "^1.2.0"
speechbrain = "^0.5.13"
pyarrow = "6.0.1"
"hurry.filesize" = "^0.9"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"